--- a/templates/questions.html
+++ b/templates/questions.html
@@ -27,9 +27,9 @@
               </div>
             {% endif %}
             <!-- Edit button -->
-            <a href="/admin/questions/edit/{{ question.question_id }}" class="btn btn-warning me-2" data-question-id="{{ question.question_id }}" data-action="edit">Edit</a>
+            <a href="/admin/questions/edit/{{ question.question_id }}" class="btn btn-warning me-2">Edit</a>
             <!-- Delete button -->
-            <a href="/admin/questions/delete/{{ question.question_id }}" class="btn btn-danger me-2" data-question-id="{{ question.question_id }}" data-action="delete">Delete</a>
+            <a href="/admin/questions/delete/{{ question.question_id }}" class="btn btn-danger me-2">Delete</a>
           </div>
         </div>
       </div>
@@ -38,25 +38,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Add a single event listener to the parent container
-    document.querySelector('.container').addEventListener('click', function(event) {
-      // Check if the clicked element is a button
-      if (event.target.tagName === 'BUTTON') {
-        const action = event.target.getAttribute('data-action');
-        const questionId = event.target.getAttribute('data-question-id');
-
-        switch (action) {
-          case 'edit':
-
-            break;
-          case 'delete':
-            console.log(`Delete button clicked for question ID: ${questionId}`);
-            break;
-          default:
-            console.log('Unknown action');
-        }
-      }
-    });
   </script>
 </body>
 </html>
