--- a/templates/editQuestions.html
+++ b/templates/editQuestions.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +31,7 @@
       <div class="card">
         <div class="card-body">
           <div class="row row-cols-1 row-cols-sm-2 g-3 mb-3">
-            {% for key, value in pos_ans %}
+            {% for key, value in question.possible_answers.items() %}
               <div class="col">
                 <div class="input-group">
                   <input value="{{ value }}" type="text" id="removeInput{{ key }}" class="form-control" placeholder="Answer" aria-label="remove" aria-describedby="remove">
