--- a/templates/addQuestion.html
+++ b/templates/addQuestion.html
@@ -8,17 +8,17 @@
 </head>
 <body>
   <div class="container mt-5">
-    <form action="/admin/questions/edit/{{ question.question_id }}/">
+    <form action="/admin/questions/add/redirect/">
       <div class="card mb-2">
         <div class="card-body d-flex flex-column flex-sm-row justify-content-between align-items-center">
           <div class="input-group me-0 me-sm-5 mb-2 mb-sm-0">
             <span class="input-group-text" id="question-input">Question</span>
-            <input value="{{ question.question_text }}" type="text" class="form-control" aria-label="question-input" aria-describedby="question-input" name="question">
+            <input type="text" class="form-control" aria-label="question-input" aria-describedby="question-input" name="question">
           </div>
           <div class="d-flex align-items-center">
             <!-- Checkbox button -->
             <div class="me-2">
-              <input type="checkbox" class="btn-check" id="type" autocomplete="off" name="type" disabled>
+              <input type="checkbox" class="btn-check" id="type" autocomplete="off" name="type">
               <label class="btn btn-outline-secondary" for="type">Multi</label>
             </div>
             <!-- Save button -->
@@ -31,14 +31,6 @@
       <div class="card" id="questions-list">
         <div class="card-body">
           <div class="row row-cols-1 row-cols-sm-2 g-3 mb-3 answers-container" id="answers-container">
-            {% for key, value in pos_ans %}
-              <div class="col">
-                <div class="input-group">
-                  <input value="{{ value }}" id="pos_ans{{ key }}" type="text" class="form-control pos-answer" placeholder="Answer" aria-label="remove" aria-describedby="remove" name="pos_ans{{ key }}">
-                  <button class="btn btn-outline-danger" onclick="removeParent(this)" type="button">Remove</button>
-                </div>
-              </div>
-            {% endfor %}
           </div>
           <button class="btn btn-outline-success" type="button" id="add-answer">Add answer</button>
         </div>
@@ -48,19 +40,14 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     const type = document.getElementById("type")
-    let counter = parseInt("{{ hi_id }}")
     function toggleCheckbox(bool) {
       type.checked = bool;
     }
 
-    let question_type = "{{ question.question_type }}"
+    let question_type = "string"
 
     document.addEventListener("DOMContentLoaded", () => {
-      if (question_type === "multi") {
-          toggleCheckbox(true)
-      } else {
-          document.getElementById("questions-list").style.display = "none"
-      }
+      document.getElementById("questions-list").style.display = "none"
     });
 
     type.addEventListener("change", () => {
@@ -77,6 +64,8 @@
     function removeParent(button) {
       button.parentElement.parentElement.remove();
     }
+
+    let counter = 0
 
     document.getElementById("add-answer").addEventListener("click", () => {
       console.log("test")
