--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,24 +7,31 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-5">
-    <h1>{{ questions.question_text }}</h1>
-    <div class="card" id="questions-list">
+  <div class="container mt-4 mb-4">
+    <a href="/admin/group-and-sort" class="btn btn-success mb-4" type="button">group and sort all</a>
+
+    <div class="card pt-3" id="questions-list">
       <div class="card-body">
-        <div class="row row-cols-1 row-cols-sm-2 g-3 mb-3 answers-container" id="answers-container">
+        <div class="row row-cols-1 row-cols-sm-2 g-3 answers-container" id="answers-container">
           {% for question in questions.values() %}
             <div class="col">
               <div class="alert alert-secondary">
-                {% for k, v in question.grouped.items() %}
-                  {{ k }}: {{ v }}<br/>
-                {% endfor %}
+                <h5>{{ question.question_text }}</h5>
+                  <ul>
+                  {% for k, v in question.grouped.items() %}
+                    <li>{{ k }}: {{ v }}</li>
+                  {% endfor %}
+                  </ul>
+
+                <a href="/admin/questions/delans/{{ question.question_id }}" class="btn btn-danger">Reset</a>
               </div>
             </div>
           {% endfor %}
         </div>
       </div>
     </div>
-    <a href="/admin/group-and-sort" class="btn btn-success mt-3" type="button">group and sort all</a>
+
+    <a href="/admin/group-and-sort" class="btn btn-success mt-4" type="button">group and sort all</a>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
