--- a/templates/questions.html
+++ b/templates/questions.html
@@ -7,7 +7,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container mt-5">
+  <div class="container mt-4 mb-4">
+    <a href="/admin/questions/add/" class="btn btn-success mb-4">Add Question</a>
+
     {% for question in questions %}
       <div class="card mb-3">
         <div class="card-body d-flex flex-column flex-sm-row justify-content-between align-items-center">
@@ -34,7 +36,8 @@
         </div>
       </div>
     {% endfor %}
-    <a href="/admin/questions/add/" class="btn btn-success me-2">Add Question</a>
+
+    <a href="/admin/questions/add/" class="btn btn-success mt-2">Add Question</a>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
